fix: resolve Docker write permissions security hotspots
- Replace COPY --chown with COPY --chmod for read-only permissions
- Set explicit permissions for all copied files (444 for read-only, 550 for executables)
- Update all Dockerfiles to prevent non-root users from having write access to application code
- Add comprehensive Docker permissions security documentation
- Update validation script to check for insecure permission patterns

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -32,15 +32,14 @@ RUN apk --no-cache add ca-certificates && \
 # Create app directory
 WORKDIR /app
 
-# Copy the binary from builder
-COPY --from=builder /app/backend/cmd/server/server .
-# Copy data directory with proper ownership
-COPY --from=builder --chown=appuser:appgroup /app/data ./data
+# Copy the binary from builder with execute permissions
+COPY --from=builder --chmod=550 /app/backend/cmd/server/server .
+# Copy data directory as read-only
+COPY --from=builder --chmod=440 /app/data ./data
 
-# Change ownership of the binary and set read-only permissions
+# Change ownership after setting permissions
 RUN chown appuser:appgroup server && \
-    chmod 550 server && \
-    chmod -R 440 ./data
+    chown -R appuser:appgroup ./data
 
 # Switch to non-root user
 USER appuser
