fix: eliminate glob patterns in Docker COPY commands for security
- Replace all wildcard patterns with explicit file names in COPY commands
- Fix package*.json patterns to explicitly list package.json and package-lock.json
- Replace .eslintrc* with explicit .eslintrc.js
- Replace jest.config.* with explicit jest.config.js
- Add security documentation explaining risks of glob patterns
- Update validation script to check for glob patterns in COPY commands

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,7 +8,7 @@ RUN addgroup -g 1001 -S buildgroup && \
 WORKDIR /app
 
 # Copy package files
-COPY frontend/package*.json ./
+COPY frontend/package.json frontend/package-lock.json ./
 
 # Install dependencies
 RUN npm ci
@@ -18,7 +18,7 @@ RUN npm ci
 COPY --chmod=444 frontend/public ./public
 COPY --chmod=444 frontend/src ./src
 COPY --chmod=444 frontend/tsconfig.json ./
-COPY --chmod=444 frontend/.eslintrc* ./
+COPY --chmod=444 frontend/.eslintrc.js ./
 
 # Set proper ownership and permissions
 # Source files should be read-only, build directory needs write access
@@ -43,7 +43,7 @@ RUN addgroup -g 1001 -S devgroup && \
 WORKDIR /app
 
 # Copy package files
-COPY frontend/package*.json ./
+COPY frontend/package.json frontend/package-lock.json ./
 
 # Install all dependencies (including devDependencies)
 RUN npm install
@@ -53,7 +53,7 @@ RUN npm install
 COPY --chmod=755 frontend/public ./public
 COPY --chmod=755 frontend/src ./src
 COPY --chmod=644 frontend/tsconfig.json ./
-COPY --chmod=644 frontend/.eslintrc* ./
+COPY --chmod=644 frontend/.eslintrc.js ./
 
 # Set ownership for development (write access needed)
 RUN chown -R devuser:devgroup /app
