fix: resolve debug features in production security hotspot S4507
- Remove source maps from production webpack build (security risk)
- Add clear documentation for Docker multi-stage build usage
- Add NOSONAR comments to development stages with warnings
- Create production build script ensuring correct stage targeting
- Add docker-compose.production.yml for secure deployments
- Create .env.production.template with secure defaults
- Update README with production deployment section
- Ensure NODE_ENV=development only exists in development stages
- Add stage selection warnings: use 'production' for frontend, 'final' for backend
- Update .gitignore to exclude production environment files

--- a/backend/Dockerfile.optimized
+++ b/backend/Dockerfile.optimized
@@ -94,6 +94,9 @@ ENTRYPOINT ["/app/server"]
 
 # ========================================
 # Development stage with debugging tools
+# IMPORTANT: This stage is for development only. DO NOT use for production deployments.
+# Production deployments should use the "final" stage (Stage 4).
+# This stage includes debugging tools (dlv) and hot reload (air).
 # ========================================
 FROM golang:1.21-alpine AS development
 
