--- a/backend/Dockerfile.optimized
+++ b/backend/Dockerfile.optimized
@@ -100,14 +100,10 @@ ENTRYPOINT ["/app/server"]
 # ========================================
 FROM golang:1.21-alpine AS development
 
-# Install development tools
-RUN apk add --no-cache bash curl git make vim
-
-# Install air for hot reload
-RUN go install github.com/cosmtrek/air@latest
-
-# Install dlv for debugging
-RUN go install github.com/go-delve/delve/cmd/dlv@latest
+# Install development tools, air for hot reload, and dlv for debugging
+RUN apk add --no-cache bash curl git make vim \
+    && go install github.com/cosmtrek/air@latest \
+    && go install github.com/go-delve/delve/cmd/dlv@latest
 
 WORKDIR /app
 
@@ -134,7 +130,7 @@ CMD ["air", "-c", ".air.toml"]
 # ========================================
 FROM alpine:3.19 AS production-debug
 
-# Install runtime dependencies and debug tools
+# Install runtime dependencies, debug tools, and create non-root user
 RUN apk add --no-cache \
     bind-tools \
     ca-certificates \
@@ -142,11 +138,9 @@ RUN apk add --no-cache \
     htop \
     net-tools \
     procps \
-    && rm -rf /var/cache/apk/*
-
-# Create non-root user
-RUN addgroup -g 1001 -S appgroup && \
-    adduser -u 1001 -S appuser -G appgroup
+    && rm -rf /var/cache/apk/* \
+    && addgroup -g 1001 -S appgroup \
+    && adduser -u 1001 -S appuser -G appgroup
 
 WORKDIR /app
 
