--- a/frontend/Dockerfile.optimized
+++ b/frontend/Dockerfile.optimized
@@ -129,7 +129,7 @@ LABEL org.opencontainers.image.title="D&D Game Frontend" \
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost:3000/ || exit 1
+    CMD ["/bin/sh", "-c", "curl -f http://localhost:3000/ || exit 1"]
 
 # Start nginx
 CMD ["nginx", "-g", "daemon off;"]
